@@ -29,7 +29,8 @@ class Session {
 	public $SID = NULL;			// session unique ID
 	public $_version = '1.11-git';		// library version
 	public $_revision = '$Revision$';	// library revision
-	public $_content = array();		// session content array
+	private $_content = array();		// session content array
+	private $_persistent_settings = array();	// user persistent settings
 	public $_updated = FALSE;			// indicates that content has
 						// been altered
 	public $DB = NULL;				// database library object
@@ -79,9 +80,11 @@ class Session {
 	}
 
 	public function restore_user_settings($force_settings_restore = false) {
-		$settings = $this->DB->GetOne('SELECT settings FROM users WHERE login = ?', array($this->_content['session_login']));
+		$settings = $this->DB->GetRow('SELECT settings, persistentsettings FROM users WHERE login = ?', array($this->_content['session_login']));
 		if (!empty($settings)) {
-			$settings = unserialize($settings);
+			if (isset($settings['persistentsettings']))
+				$this->_persistent_settings = unserialize($settings['persistentsettings']);
+			$settings = unserialize($settings['settings']);
 			if (!isset($settings['mtime']) || time() - $settings['mtime'] < $this->settings_timeout || $force_settings_restore)
 				$this->_content = array_merge($this->_content, $settings);
 		}
@@ -188,8 +191,8 @@ class Session {
 			$settings_content['mtime'] = time();
 			$this->DB->Execute('UPDATE sessions SET content = ?, mtime = ?NOW? WHERE id = ?',
 				array(serialize($session_content), $this->SID));
-			$this->DB->Execute('UPDATE users SET settings = ? WHERE login = ?',
-				array(serialize($settings_content), $this->_content['session_login']));
+			$this->DB->Execute('UPDATE users SET settings = ?, persistentsettings = ? WHERE login = ?',
+				array(serialize($settings_content), serialize($this->_persistent_settings), $this->_content['session_login']));
 		}
 	}
 
@@ -200,6 +203,22 @@ class Session {
 		$this->DB->Execute('DELETE FROM sessions WHERE id = ?', array($this->SID));
 		$this->_content = array();
 		$this->SID = NULL;
+	}
+
+	public function get_persistent_setting($variable) {
+		if (isset($this->_persistent_settings[$variable]))
+			return $this->_persistent_settings[$variable];
+		else
+			return NULL;
+	}
+
+	public function save_persistent_setting($variable, $content) {
+		$this->_persistent_settings[$variable] = $content;
+
+		if ($this->autoupdate)
+			$this->_saveSession();
+		else
+			$this->_updated = true;
 	}
 
 	public function _garbageCollector()
