@@ -50,6 +50,7 @@ $hook_data = $LMS->executeHook(
 $customerinfo = $hook_data['customerinfo'];
 
 $SMARTY->assign('xajax', $LMS->RunXajax());
+$SMARTY->assign('customerinfo_sortable_order', $SESSION->get_persistent_setting('customerinfo-sortable-order'));
 $SMARTY->display('customer/customerinfo.html');
 
 ?>
