@@ -45,7 +45,7 @@
 </div>
 <script type="text/javascript">
 <!--
-	restoreSortable('customerinfo-sortable');
+	restoreSortable('customerinfo-sortable', '{$customerinfo_sortable_order}');
 //-->
 </script>
 {/block}
