@@ -59,7 +59,7 @@
 </div>
 <script type="text/javascript">
 <!--
-	restoreSortable('nodeedit-sortable');
+	restoreSortable('nodeedit-sortable', '{$nodeedit_sortable_order}');
 //-->
 </script>
 {/block}
