@@ -58,7 +58,7 @@
 </div>
 <script type="text/javascript">
 <!--
-	restoreSortable('nodeinfo-sortable');
+	restoreSortable('nodeinfo-sortable', '{$nodeinfo_sortable_order}');
 //-->
 </script>
 {/block}
